WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165037
[CSS Font Loading] FontFace.load() promises don't always fire
https://bugs.webkit.org/show_bug.cgi?id=165037
Summary
[CSS Font Loading] FontFace.load() promises don't always fire
Myles C. Maxfield
Reported
2016-11-22 20:59:37 PST
[CSS Font Loading] FontFace.load() promises don't always fire
Attachments
WIP
(5.02 KB, patch)
2016-11-22 21:00 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(8.42 KB, patch)
2016-11-22 22:15 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-11-22 21:00:16 PST
Created
attachment 295350
[details]
WIP
Myles C. Maxfield
Comment 2
2016-11-22 22:15:20 PST
Created
attachment 295352
[details]
Patch
WebKit Commit Bot
Comment 3
2016-11-25 09:35:20 PST
Comment on
attachment 295352
[details]
Patch Clearing flags on attachment: 295352 Committed
r208976
: <
http://trac.webkit.org/changeset/208976
>
WebKit Commit Bot
Comment 4
2016-11-25 09:35:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug